Bug 320098 - Expire settings not saved if you only click Ok
Summary: Expire settings not saved if you only click Ok
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-21 15:19 UTC by Thiago Macieira
Modified: 2013-05-31 17:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2013-05-21 15:19:13 UTC
If you do not use the "Save settings and expire now" button, the expiration settings are not saved. That is counter-intuitive.

Reproducible: Always

Steps to Reproduce:
1. Right-click a folder
2. Select Expire
3. Change your expiration settings and click Ok. Do not click "Save settings and expire now"
4. Repeat steps 1-2 on the same folder
Actual Results:  
The settings have reverted to their previous state

Expected Results:  
The settings I set should have been saved.

If you click the "Save settings and expire now" button, it does save, but it also expires now which is an extra action that I did not want to take.
Comment 1 Laurent Montel 2013-05-21 15:22:08 UTC
Oh! I thought that I fixed it 1month ago.
Will investigate it soon
Comment 2 Thiago Macieira 2013-05-21 15:35:23 UTC
My build might be a month old, actually...
Comment 3 Laurent Montel 2013-05-21 15:42:40 UTC
Ok but will look at it this week to verify that all works fine :)
Comment 4 Laurent Montel 2013-05-31 17:02:00 UTC
ok work fine.but when we click only on Ok expire is not do immediatly as previous version 
I will look at it now
Comment 5 Laurent Montel 2013-05-31 17:49:52 UTC
Git commit 0cc0cd771b65d3ef1648dde98fb2a64fe8c52b1c by Montel Laurent.
Committed on 31/05/2013 at 19:10.
Pushed by mlaurent into branch 'master'.

Fix Bug 320098 - Expire settings not saved if you only click Ok

Now we expire when we click on ok (was the last bug in this dialogbox)

FIXED-IN: 4.11

M  +8    -4    mailcommon/collectionpage/collectionexpirypage.cpp
M  +1    -1    mailcommon/collectionpage/collectionexpirypage.h

http://commits.kde.org/kdepim/0cc0cd771b65d3ef1648dde98fb2a64fe8c52b1c