Fix Bug 320098 - Expire settings not saved if you only click Ok

Now we expire when we click on ok (was the last bug in this dialogbox)

FIXED-IN: 4.11
BUG: 320098